--- a/css/landing-page/landing-stylesheet.scss
+++ b/css/landing-page/landing-stylesheet.scss
@@ -151,7 +151,7 @@ section#action {
 .h3holder {
     background-color: $blackColor;
     width: 100%;
-    height: 20%;
+    height: 6vh;
     border-radius: 6px 6px 0 0;
     margin: 0;
     padding-left: 5%;
@@ -177,6 +177,7 @@ section#action {
     flex-direction: column;
     text-align: left;
     font-weight: 450;
+    font-size: 1.8vh;
     gap: 1vh;
 }
 
