--- a/css/universal-files/_footer.scss
+++ b/css/universal-files/_footer.scss
@@ -77,7 +77,7 @@ footer {
 .listC {
     margin-top: 2.5vh;
     padding: 0;
-    max-width: 30%;
+    max-width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
